made dis manual be default op, input hover works in all

--- a/popup.html
+++ b/popup.html
@@ -19,14 +19,14 @@
       ul{
         padding-left: 0;
       }
+      input:focus{
+        border-color: blue;
+      }
       #status {
         /* avoid an excessively wide status text */
         text-overflow: ellipsis;
         width: 305px;
         overflow: hidden;
-      }
-      #websiteURL:focus{
-        border-color: blue;
       }
       #title{
         color: #002F2F;
