small changes, gave form id change name of list column

--- a/popup.html
+++ b/popup.html
@@ -148,7 +148,7 @@
         <div id="home" class="tabCon">
             <div id="addSite">
 
-              <form>
+              <form id="mainForm">
                 <p class="title"><label>Pokus NOW</label></p>
                 <p>Website Address:</p>
                 <input name="blockWebsite" class="input-field" type="text" value="" id="websiteURL" size="45" maxlength="40" placeholder="block this site">
@@ -181,7 +181,7 @@
               <table class="head">
                   <tr>
                       <td class="addBorder">URL: </td>
-                      <td class="addBorder">Time: </td>
+                      <td class="addBorder">Unblock Date: </td>
                       <td>Act: </td>
                   </tr>
               </table>
