removed a lot of legacy code, block using timer works again

--- a/popup.html
+++ b/popup.html
@@ -156,7 +156,7 @@
                 <input name="comment" type="text" class="input-field" value="" id="comment" size="45" maxlength="50" placeholder="Reason for blocking this site.">
                 <p>Block Period:</p>
                 <div class="center">
-                <input name="blockPeriod" class="input-field" type="text" value="" id="blockPeriod" size="10" maxlength="3" placeholder="Whole numbers only">
+                <input name="blockPeriod" class="input-field" type="text" value="" id="blockPeriod" size="10" maxlength="3" placeholder="Whole numbers only" disabled>
                 <select id="timeUnits">
                   <option value="1">Minutes</option>
                   <option value="2">Hours</option>
