reorganized all the files, put them into separate folders

--- a/popup.html
+++ b/popup.html
@@ -148,8 +148,8 @@
       -
       - [1]: https://developer.chrome.com/extensions/contentSecurityPolicy
      -->
-    <script src="jquery.js"></script>
-    <script src="popup.js"></script>
+    <script src="js/jquery.js"></script>
+    <script src="js/popup.js"></script>
   </head>
   <body>
     <div id="status">
