removed legacy code pertaining to cookies, made right click block functional again

--- a/popup.html
+++ b/popup.html
@@ -28,15 +28,15 @@
         width: 305px;
         overflow: hidden;
       }
+      #timeUnits{
+        -webkit-appearance: menulist-button;
+        height: 30px;
+      }
       .title{
         color: #002F2F;
         font-size: 20;
         font-weight: bold;
         text-align: center;
-      }
-      #timeUnits{
-        -webkit-appearance: menulist-button;
-        height: 30px;
       }
       .addBorder{
         border-right: 1px solid black;
@@ -73,6 +73,10 @@
         background-color: #EA2E49;
         border:1px solid #EA2E49;
         text-shadow:0px 1px 0px #EA2E49;        
+      }
+      .url{
+        font-size: 10px;
+        font-style: italic;
       }
       .tabs{ 
         border-bottom: 1px solid #DDD;
