made changes to about section

--- a/popup.html
+++ b/popup.html
@@ -219,8 +219,7 @@
         </div>
         <div id="about" class="hide tabCon">
 
-          <h5>I made this extension to help control my procrastination problem. Although there are other extensions similar to it, I decided to make my own to improve my coding skills. I also added features that some other website blocking extensions do not have, such as: the ability to add reasons for blocking the site, the ability to permablock sites and the ability to manually unblock a site that you have blocked by entering your password.</h5>
-          <h4 style="text-align: center">If you like this extension, and found it useful, please consider donating below. This will allow me to push updates regularly, and help me make more things like it.</h4>
+          <h4 style="text-align: center">If you like this extension, and found it useful, please consider donating below. This will motivate me to push updates regularly, and help me make more things like this app in the future. 100% of your generous contributions will go to the <a href="https://www.nrdc.org/">Natural Resources Defence Council</a>. NRDC is an amazing non-profit that focuses on preserving our environment, protecting endangered wildlife, and fighting pollution.</h4>
           
           <div style="text-align: center">
             <form action="https://www.paypal.com/cgi-bin/webscr" method="post" target="_blank">
