listed urls can now be blocked

--- a/popup.html
+++ b/popup.html
@@ -165,7 +165,7 @@
                 <p class="title"><label>Pokus NOW</label></p>
                 <p id="urlInput">URL:</p>
                 <input name="blockWebsite" class="input-field" type="text" value="" id="websiteURL" size="45" maxlength="40" placeholder="block this site">
-                <textarea id="loadedList" class="hide"></textarea>
+                <textarea id="loadedList" class="hide input-field"></textarea>
                 <p>Comments:</p>
                 <input name="comment" type="text" class="input-field" value="" id="comment" size="45" maxlength="50" placeholder="Reason for blocking this site.">
                 <p>Block Period:</p>
