created seed for password feature

--- a/popup.html
+++ b/popup.html
@@ -188,7 +188,10 @@
               </form>
             </div>
             <hr>
-            <div class="center"><input type="submit" class="big button-style" id="blockAll" value="Block All"></div>
+            <div class="center">
+              <input type="submit" class="big button-style" id="blockAll" value="Block All">
+              <input type="submit" class="big button-style" id="password" value="Password">
+            </div>
 
             <hr>
         </div>
@@ -221,7 +224,7 @@
         </div>
         <div id="about" class="hide tabCon">
 
-          <h4 style="text-align: center">If you like this extension, and found it useful, please consider donating below. This will motivate me to push updates regularly, and help me make more things like this app in the future. 100% of your generous contributions will go to the <a href="https://www.nrdc.org/">Natural Resources Defence Council</a>. NRDC is an amazing non-profit that focuses on preserving our environment, protecting endangered wildlife, and fighting pollution.</h4>
+          <h4 style="text-align: center">I made this extension to help with my procrastination problem. If you like this extension, and found it useful, please consider donating below. This will motivate me to push updates regularly, and help me make more things like this app in the future. 100% of your generous contributions will go to the <a href="https://www.nrdc.org/">Natural Resources Defence Council</a>. NRDC is an amazing non-profit that focuses on preserving our environment, protecting endangered wildlife, and fighting pollution.</h4>
           
           <div style="text-align: center">
             <form action="https://www.paypal.com/cgi-bin/webscr" method="post" target="_blank">
