small changes, made url displayed equal to url stored

--- a/popup.html
+++ b/popup.html
@@ -172,9 +172,9 @@
                 <div class="center">
                 <input name="blockPeriod" class="input-field" type="text" value="" id="blockPeriod" size="10" maxlength="3" placeholder="Whole numbers only" disabled>
                 <select id="timeUnits">
-                  <option value="1">Minutes</option>
-                  <option value="2">Hours</option>
-                  <option value="3">Days</option>
+                  <option value="1">Minute(s)</option>
+                  <option value="2">Hour(s)</option>
+                  <option value="3">Day(s)</option>
                   <option value="4" selected="selected">Unblock Manually</option>
                   <option value="5">Permanently</option>
                 </select>
