made some improvements with block page layout

--- a/popup.html
+++ b/popup.html
@@ -162,7 +162,7 @@
             <div id="addSite">
 
               <form id="mainForm">
-                <p class="title"><label>Pokus NOW</label></p>
+                <p class="title"><label>Pokus</label></p>
                 <p id="urlInput">URL:</p>
                 <input name="blockWebsite" class="input-field" type="text" value="" id="websiteURL" size="45" maxlength="40" placeholder="block this site">
                 <textarea id="loadedList" class="hide input-field"></textarea>
