removed autocomplete for form

--- a/popup.html
+++ b/popup.html
@@ -161,7 +161,7 @@
         <div id="home" class="tabCon">
             <div id="addSite">
 
-              <form id="mainForm">
+              <form id="mainForm" autocomplete="off">
                 <p class="title"><label>Pokus</label></p>
                 <p id="urlInput">URL:</p>
                 <input name="url" class="input-field" type="text" value="" id="websiteURL" size="45" maxlength="40" placeholder="block this site">
