removed code that removes permblocked sites, updated about tab

--- a/popup.html
+++ b/popup.html
@@ -50,6 +50,18 @@
         width: 295px;
         height: 50px;
       }
+      #charities{
+        text-align: center;
+      }
+      #charitiesSq img{
+          position: relative;
+          width: 70px;
+          height: 70px;
+      }
+      #charitiesLng img{
+          position: relative;
+          width: 150px;
+      }
       .title{
         color: #002F2F;
         font-size: 20;
@@ -224,17 +236,17 @@
         </div>
         <div id="about" class="hide tabCon">
 
-          <h4 style="text-align: center">I made this extension to help with my procrastination problem. If you like this extension, and found it useful, please consider donating below. This will motivate me to push updates regularly, and help me make more things like this app in the future. 100% of your generous contributions will go to the <a href="https://www.nrdc.org/">Natural Resources Defence Council</a>. NRDC is an amazing non-profit that focuses on preserving our environment, protecting endangered wildlife, and fighting pollution.</h4>
-          
-          <div style="text-align: center">
-            <form action="https://www.paypal.com/cgi-bin/webscr" method="post" target="_blank">
-            <input type="hidden" name="cmd" value="_s-xclick">
-            <input type="hidden" name="hosted_button_id" value="XAUJAYA7SWDRC">
-            <input type="image" src="https://www.paypalobjects.com/en_US/i/btn/btn_donateCC_LG.gif" border="0" name="submit" alt="PayPal - The safer, easier way to pay online!">
-            <img alt="" border="0" src="https://www.paypalobjects.com/en_US/i/scr/pixel.gif" width="1" height="1">
-            </form>
+          <h5 style="text-align: center">I made this extension to help with my procrastination problem. If you have some disposable income, and you would like to make a difference please consider donating to some of the charities I listed below. These charities are all very highly rated and do good work, and I think </h5>
+          <div id="charities">
+            <div id="charitiesSq">
+              <a href="https://www.nrdc.org" target="_blank"><img src="img/nrdcLogo.png"/></a>
+            </div>
+            <div id="charitiesLng">
+              <a href="https://www.oxfamamerica.org" target="_blank"><img src="img/oxfamLogo.png"></a>
+              <a href="https://doctorswithoutborders.org/" target="_blank"><img src="img/dwbLogo.png"></a>
+              <a href="http://www.conservationfund.org/" target="_blank"><img src="img/conFundLogo.png"></a>
+            </div>
           </div>
-
         </div>
       </div>
   </body>
